2013-01-20  Paul Smith  <psmith@gnu.org>

	* makeint.h: Change struct floc to gmk_floc typedef.
	* Many: Use the new typedef.

	* make.h: Rename to makeint.h.
	* Many: Use the new name makeint.h.

2013-01-19  Paul Smith  <psmith@gnu.org>

	* doc/make.texi (load Directive): Update to discuss location of
	loaded object file.
	(Remaking Loaded Objects): Document remaking of loaded objects.

	* main.c (main): Rename READ_MAKEFILES to READ_FILES.
	* read.c: Change READ_MAKEFILES to READ_FILES since it now
	contains loaded object files as well.
	(read_all_makefiles): Ditto.
	(eval_makefile): Ditto.
	(eval): Add any loaded file to the READ_FILES list, so that it
	will be considered for re-build.

	* load.c (load_file): Return the simple filename (no symbol) in
	the LDNAME argument (now a const char **).
	This filename should no longer have "./" prepended: modify the
	function to always check the current directory if the name has no
	"/", before using the normal methods.
	* make.h: Change the load_file() prototype.

	* README.git: Add a bit more documentation on Git workflow & rules.

2013-01-13  Paul Smith  <psmith@gnu.org>

	* main.c (main): Restore all make flags after re-exec is complete.
	Fixes Savannah bug #38051.

2013-01-12  Paul Smith  <psmith@gnu.org>

	Convert CVS archive to Git.

	* configure.in: Rename to configure.ac.
	* README.cvs: Rename to README.git and rework for Git.
	* maintMakefile: Use git clean for cleanup.
	* ChangeLog: Use new Git repository URL.
	* ChangeLog.2: Ditto.
	* Makefile.am: Change documentation for Git
	* Makefile.DOS.template: Ditto.
	* README.template: Ditto.
	* build_w32.bat: Ditto.
	* prepare_w32.bat: Ditto.
	* .cvsignore: Rename to .gitignore, and change to Git format.

2012-12-08  Eli Zaretskii  <eliz@gnu.org>

	* job.c (create_batch_file): Fix last change: always increment the
	counter of batch files before trying to use it.

2012-12-07  Eli Zaretskii  <eliz@gnu.org>

	* job.c (construct_command_argv_internal): Remove " from